# rofi-zotero

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: zotero.c
src/rofi/: history.c  history.h  settings.h
theme/: zotero.rasi
